--- a/Pipfile
+++ b/Pipfile
@@ -5,9 +5,11 @@ name = "pypi"
 
 [packages]
 python-decouple = "*"
+flask = "*"
 
 [dev-packages]
 pytest = "*"
+pylint = "*"
 
 [requires]
 python_version = "3.7"
