--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,8 @@ python:
 install:
   - pip install pipenv
   - pipenv sync --dev
+  - pipenv run python -V
+  - pipenv run which python
 
 before_script:
   - cp contrib/env-sample .env
