--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,8 @@ flask-sqlalchemy = "*"
 "psycopg2" = "*"
 ipdb = "*"
 requests = {version = "*", editable = true}
+aiohttp = "*"
+cchardet = "*"
 
 [dev-packages]
 pytest = "*"
